Add: teleop key ros node for debug.

--- a/interactive-customer-service-ros/CMakeLists.txt
+++ b/interactive-customer-service-ros/CMakeLists.txt
@@ -209,3 +209,6 @@ add_executable(interactive_customer_service_sample src/interactive_customer_serv
 target_link_libraries(interactive_customer_service_sample ${catkin_LIBRARIES})
 add_dependencies(interactive_customer_service_sample ${PROJECT_NAME}_generate_messages_cpp)
 
+add_executable(teleop_key_ics src/teleop_key_ics.cpp)
+target_link_libraries(teleop_key_ics ${catkin_LIBRARIES})
+add_dependencies(teleop_key_ics ${PROJECT_NAME}_generate_messages_cpp)
