--- a/interactive-customer-service-ros/package.xml
+++ b/interactive-customer-service-ros/package.xml
@@ -46,6 +46,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>cv_bridge</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -53,7 +54,8 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>trajectory_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
-
+  <run_depend>cv_bridge</run_depend>
+  
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
